; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/hcic/extr_hcicmds.c_btsnd_hcic_inq_cancel.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/hcic/extr_hcicmds.c_btsnd_hcic_inq_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@HCIC_PARAM_SIZE_INQ_CANCEL = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@HCIC_PREAMBLE_SIZE = common dso_local global i64 0, align 8
@HCI_INQUIRY_CANCEL = common dso_local global i32 0, align 4
@LOCAL_BR_EDR_CONTROLLER_ID = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btsnd_hcic_inq_cancel() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = load i64, i64* @HCIC_PARAM_SIZE_INQ_CANCEL, align 8
  %5 = call %struct.TYPE_4__* @HCI_GET_CMD_BUF(i64 %4)
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %2, align 8
  %6 = icmp eq %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %1, align 4
  br label %30

9:                                                ; preds = %0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i64 1
  %12 = bitcast %struct.TYPE_4__* %11 to i32*
  store i32* %12, i32** %3, align 8
  %13 = load i64, i64* @HCIC_PREAMBLE_SIZE, align 8
  %14 = load i64, i64* @HCIC_PARAM_SIZE_INQ_CANCEL, align 8
  %15 = add nsw i64 %13, %14
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  store i64 %15, i64* %17, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i64 0, i64* %19, align 8
  %20 = load i32*, i32** %3, align 8
  %21 = load i32, i32* @HCI_INQUIRY_CANCEL, align 4
  %22 = call i32 @UINT16_TO_STREAM(i32* %20, i32 %21)
  %23 = load i32*, i32** %3, align 8
  %24 = load i64, i64* @HCIC_PARAM_SIZE_INQ_CANCEL, align 8
  %25 = call i32 @UINT8_TO_STREAM(i32* %23, i64 %24)
  %26 = load i32, i32* @LOCAL_BR_EDR_CONTROLLER_ID, align 4
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %28 = call i32 @btu_hcif_send_cmd(i32 %26, %struct.TYPE_4__* %27)
  %29 = load i32, i32* @TRUE, align 4
  store i32 %29, i32* %1, align 4
  br label %30

30:                                               ; preds = %9, %7
  %31 = load i32, i32* %1, align 4
  ret i32 %31
}

declare dso_local %struct.TYPE_4__* @HCI_GET_CMD_BUF(i64) #1

declare dso_local i32 @UINT16_TO_STREAM(i32*, i32) #1

declare dso_local i32 @UINT8_TO_STREAM(i32*, i64) #1

declare dso_local i32 @btu_hcif_send_cmd(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
